--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/kinecosystem/kin-sdk-node#readme",
   "devDependencies": {
+    "@types/eventsource": "^1.1.0",
     "@types/jest": "^24.0.4",
     "@types/nock": "^9.3.1",
     "jest": "^23.6.0",
