.ts code coverage instead .js code coverage
* compile test to bin folder
* import in tests from ts (src) file and not from bin
* use ts-jest for transform

--- a/package.json
+++ b/package.json
@@ -51,13 +51,14 @@
     ],
     "testEnvironment": "node",
     "transform": {
-      "^.+\\.(ts|tsx)$": "<rootDir>/tests/preprocessor.js"
+      "^.+\\.(ts|tsx)$": "ts-jest"
     },
     "testMatch": [
       "**/tests/src/**.ts"
     ],
     "testPathIgnorePatterns": [
       ".d.ts"
-    ]
+    ],
+    "collectCoverage": true
   }
 }
