--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "cryptocurrency"
   ],
   "author": "Kin Ecosystem",
-  "license": "MIT",
+  "license": "Kin Ecosystem SDK License",
   "bugs": {
     "url": "https://github.com/kinecosystem/kin-sdk-node/issues"
   },
