--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "npm-run-all clean transpile",
     "transpile-tests": "tsc -p tests",
     "test": "npm-run-all transpile transpile-tests jest",
-    "jest": "jest --forceExit --runInBand --detectOpenHandles --coverage"
+    "unit-test": "npm-run-all transpile transpile-tests jest-unit",
+    "jest": "jest --forceExit --runInBand --detectOpenHandles --coverage",
+    "jest-unit": "jest --forceExit --detectOpenHandles --coverage unit"
   },
   "repository": {
     "type": "git",
