--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "ts-jest": "^23.10.5",
     "tslint": "^5.14.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "jest-each": "^24.7.1"
   },
   "dependencies": {
-    "@kinecosystem/kin-sdk": "0.20.4",
-    "jest-each": "^24.7.1"
+    "@kinecosystem/kin-sdk": "0.20.4"
   },
   "jest": {
     "moduleFileExtensions": [
