--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "transpile-tests": "tsc -p tests",
     "test": "npm-run-all transpile transpile-tests jest",
     "unit-test": "npm-run-all transpile transpile-tests jest-unit",
-    "jest": "jest --forceExit --runInBand --detectOpenHandles --coverage",
-    "jest-unit": "jest --forceExit --detectOpenHandles --coverage unit"
+    "jest": "jest --forceExit --runInBand --detectOpenHandles --coverage '.*\\.test.*'",
+    "jest-unit": "jest --forceExit --detectOpenHandles --coverage '.*\\.unit.test.*'"
   },
   "repository": {
     "type": "git",
