Added retry configuration and added tests to kinAccount.unit.test. (#36)
* Added retry configuration and added tests to kinAccount.unit.test.
The test of retry combined with redirect needs further investigation.

* Fixed the get method with redirect and retry.

* Update tests/src/transactionRetrieverTest_fetchTransaction.unit.test.ts

Co-Authored-By: Yossi Rizgan <yosriz@gmail.com>

* Update tests/src/transactionRetrieverTest_fetchTransaction.unit.test.ts

Co-Authored-By: Yossi Rizgan <yosriz@gmail.com>

* Fixed due to code review.

* Replaced params

* Removed to do

* Removed duplicated code.

* 0.9.1

* Updated @kinecosystem/kin-sdk

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kinecosystem/kin-sdk-node",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "Kin SDK for the Node runtime",
   "main": "scripts/bin/index.js",
   "types": "scripts/bin/index.d.ts",
@@ -47,7 +47,7 @@
     "jest-each": "^24.7.1"
   },
   "dependencies": {
-    "@kinecosystem/kin-sdk": "0.20.5"
+    "@kinecosystem/kin-sdk": "^0.20.6"
   },
   "jest": {
     "moduleFileExtensions": [
