--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: node_js
-sudo: required
-services: docker
 
-node_js:
-  - "8"
+matrix:
+  include:
+  - node_js: 8
+  - node_js: 10
+  - node_js: 11
+  - node_js: 12
 
 script:
   - npm run build
   - npm run test
-
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
